# Midnight

./: .gitignore  AUDIT_BUGS.md  CAHIER_DES_CHARGES.md  COPILOT_MEMO.md  REALTIME_ORCHESTRA_GENERATOR.md  SOUND_QUALITY.md  _move_process_out.ps1  check_braces.py  diagnose_cpp_syntax.py  find_brace.py  heroic_adventure_theme.py  logs_ichigos.txt  melody_maker.py  midi.py  midi_editor.py  patch1.py  patch2.py  patch3.py  patch_full_sf2.py  render_with_soundfont.py  transform_view.py
midnight-plugins/: CMakeLists.txt
midnight-plugins/common/: algo.h  fx.h  sf2_editor.h  sf2_editor.h.tmp  sf2_maker.h  tsf.h
midnight-plugins/plugins/melody_maker/: CMakeLists.txt  knob.h  logger.h  plugin.cpp  plugin_vst3.cpp  plugin_vst3.h  ui_constants.h  view.cpp
ml_training/: README.md  _insert_rhythm.py  analyze_ichigos.py  dataset.py  download_classical.py  download_emopia.py  download_vgmidi.py  export_onnx.py  generate.py  generate_chord_patterns.py  generate_dataset.py  generate_patterns.py  generate_phrases.py  generate_seeds_h.py  hf_dataset.py  logs_ichigos.txt  midi_pattern_learner.py  model.py  prepare_data.py  requirements.txt  scrape_ichigos.py  train.py
ml_training/data/: vgmidi_index.csv
ml_training/data/patterns/: generated_chord_patterns.h  generated_patterns.h  generated_phrases.h  ichigos_patterns.h  ichigos_report.json  ichigos_summary.txt  patterns.h  report.json  seeds.h  seeds_full.h  seeds_progression.h  seeds_rhythm.h  summary.txt
